tests/hopix/typechecker/bad/while3.hopix
fun f (x : unit) : unit =
 while (true) { 1 }